--- a/sub3.css
+++ b/sub3.css
@@ -69,38 +69,41 @@ position: relative;/*로고포지션의 부모
 
 
 
-
-#nav{ height: 52px;}
-#navin{ width: 1320px ; margin: 0 auto; }
-
- #navin>ul>li{ float: left;  padding: 15px 0;  text-align: center; width: 20%; font-size: 18px; font-weight: bold;}
-#navin>ul>li>a{ color: rgb(61, 29, 29);}
-
-.sub li a{display: block; padding: 10px 0; background: rgb(160, 95, 35); color: #fff; font-size: 12px; font-weight: normal; border-top: 1px solid rgba(255,255,255, 0.3); border-bottom:1px solid rgba(0,0,0, 0.3) ;}
-.sub li a:hover{ background: rgb(236, 229, 198); color: rgb(83, 69, 6); transition: all 1s; }
-
-.sub{ position: absolute; top: 52px; left: 0; width: 100%;}
-
-#navin>ul>li{ position: relative; /*서브메뉴포지션기준*/}
-.sub{ opacity: 0; transform: scaleY(0); transform-origin: top; /* 스케일의 기준점 변경 호버가 아니라 서브에 지정해야*/} /*투명도와 스케일속성으로 높이를 0으로 만들어 안보이개 한다*/
-#navin>ul>li:hover>.sub{ opacity: 1; transform: scaleY(1); transition: all 1s;}
+    #nav{ clear: both; height: 56px; background:white; }
+    #navin{ width: 1320px ; margin: 0 auto; }
+    
+     #navin>ul>li{ float: left;  padding: 15px 0;  text-align: center; width: 20%; font-size: 18px; font-weight: bold;}
+    #navin>ul>li>a{ color:#1f0b02;}
+    
+    .sub li a{display: block; padding: 10px 0; background: #744f49; opacity: 50%; color: #fff; font-size: 17px; font-weight: bold; border-top: 1px solid rgba(255,255,255, 0.3); border-bottom:1px solid rgba(0,0,0, 0.3) ;}
+    .sub li a:hover{ background: #fbf2ee; color: #744f49; opacity: 50%; transition: all 1s; }
+    
+    .sub{ position: absolute; top: 56px; left: 0; width: 100%; z-index:10;}
+    
+    #navin>ul>li{ position: relative; /*서브메뉴포지션기준*/}
+    .sub{ opacity: 0; transform: scaleY(0); transform-origin: top; /* 스케일의 기준점 변경 호버가 아니라 서브에 지정해야*/} /*투명도와 스케일속성으로 높이를 0으로 만들어 안보이개 한다*/
+    #navin>ul>li:hover>.sub{ opacity: 1; transform: scaleY(1); transition: all 1s;}
+    
 
 
 
 h3{ font-size: 22px; text-align: left;  color: #bb7285;}
 h2{ font-size: 28px; font-weight: bold;  line-height: 45px;}
 h1{ font-size: 35px; font-weight: bold;  text-align:center; padding: 80px 0 30px;}
-  p{ font-size: 14px; padding:20px 0;  text-align: left;  line-height: 25px;}
+  p{ font-size: 16px; padding:20px 0;  text-align: left;  line-height: 25px;}
+h5{  font-size: 20px; color: #bb7285; padding: 50px;}
 
 
 
- 
+
+.box{ margin: 0 auto; width: 1320px; height:500px ;  text-align: center;background-color: #fbf2ee; padding: 70px 0; border: 3px solid #744f49;}
+.box p{font-size: 17px; font-weight: bold;text-align: center; padding: 30px; }
+.box h2{ border-bottom: 1px solid rgb(71, 70, 70);}
+ .box h3{ font-size: 20px; color: #744f49;text-align: center; }
 #eventba{margin: 0 auto; width: 1320px; height: 600px; }
 
 .eventbanerin{float: left;}
 .eventbanertext{ float:right; text-align: left; padding: 100px 30px; width:550px ;box-sizing: border-box; background-color: #fbf2ee; height: 400px;}
-
-
 
 
 
@@ -127,7 +130,7 @@ ul,
 			margin: auto; text-align: center;
 		}
 
- .e1 :hover{ }
+ .e1 :hover{  }
 
 		/*탭 메뉴 모양*/
 		.tabs li {
@@ -158,6 +161,10 @@ ul,
 			
 			padding: 30px 0;
 		}
+
+
+
+
 
 
 
@@ -201,7 +208,7 @@ ul,
     
     #footer{ clear: both;
       background:#522b19;
-      height:100px;
+      height:200px;
       padding:30px 0;
     }
     
