--- a/sub3.css
+++ b/sub3.css
@@ -129,8 +129,8 @@ ul,
 			width: 1320px;
 			margin: auto; text-align: center;
 		}
-
- .e1 :hover{  }
+ .eventbox :hover{ transform: scale(1.1,1.1); opacity: 0.2;
+  transition: all 1s;  }
 
 		/*탭 메뉴 모양*/
 		.tabs li {
@@ -208,7 +208,7 @@ ul,
     
     #footer{ clear: both;
       background:#522b19;
-      height:200px;
+      height:150px;
       padding:30px 0;
     }
     
