--- a/sub3.css
+++ b/sub3.css
@@ -168,11 +168,17 @@ ul,
 
 
 
-
-  
-    #footer_inner{ clear: both;
+    #footer{clear: both;
+      background:#522b19;
+      height:170px;
+      
+    }
+    
+     
+    #footer_inner{
       width:1320px;
       margin:0 auto;
+      padding-top: 30px;
     }
     
     .copyright ul li{
@@ -182,8 +188,13 @@ ul,
     .copyright ul li a{
       color:#ccc;
     }
+    
+    .copyright li a:hover{
+     color: #fff;
+    }
+    
     .copyright p{
-      padding-top:30px;
+      padding-top:20px;
       clear:both;
       color:#ccc;
     }
@@ -204,11 +215,5 @@ ul,
     .sns{
       float:right;
     }
-    #footer_inner p{ clear: both; text-align: left; color: #aaa; padding: 30px 0;}
-    
-    #footer{ clear: both;
-      background:#522b19;
-      height:150px;
-      padding:30px 0;
-    }
+    #footer_inner p{ clear: both; text-align: left; color: #fff; padding: 20px 0;}
     
